--- a/src/styles/ProfilePage.module.css
+++ b/src/styles/ProfilePage.module.css
@@ -3,6 +3,8 @@
     height: 120px;
     width: 120px;
     margin: 4px;
+    position: relative;
+    z-index: 10;
   }
   
   @media screen and (max-width: 991px) {
